--- a/frontend/angular/src/index.html
+++ b/frontend/angular/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Banco Safra</title>
-  <link rel="icon" type="image/x-icon" href="faviconfd.ico">
+  <link rel="icon" type="image/x-icon" href="bancosafra.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700|Material+Icons" rel="stylesheet">
   <style type="text/css">
     .center-load{
